fix provider 12